minor tweak to headers for sub elements to resolve alignment issues in printing

--- a/protected/assets/css/style.css
+++ b/protected/assets/css/style.css
@@ -7154,13 +7154,12 @@ tfoot.pagination-container .pagination-view-all {
 /* line 37, ../sass/openeyes/components/events/_sub-elements.scss */
 .sub-element .sub-element-title {
   color: #666;
-  float: left;
   font-size: 0.8125rem;
   font-style: normal;
   margin: 0;
   padding: 5px 8px;
 }
-/* line 45, ../sass/openeyes/components/events/_sub-elements.scss */
+/* line 44, ../sass/openeyes/components/events/_sub-elements.scss */
 .sub-element .element-eye {
   border-top: 1px solid #fafafa;
 }
@@ -7171,16 +7170,16 @@ tfoot.pagination-container .pagination-view-all {
   }
 }
 
-/* line 53, ../sass/openeyes/components/events/_sub-elements.scss */
+/* line 52, ../sass/openeyes/components/events/_sub-elements.scss */
 .sub-element-header {
   background: #fafafa;
 }
 
-/* line 68, ../sass/openeyes/components/events/_sub-elements.scss */
+/* line 67, ../sass/openeyes/components/events/_sub-elements.scss */
 .edit .sub-element-actions {
   padding: 1px 2px 0 0;
 }
-/* line 77, ../sass/openeyes/components/events/_sub-elements.scss */
+/* line 76, ../sass/openeyes/components/events/_sub-elements.scss */
 .edit .sub-elements-list li {
   margin-bottom: 10px;
 }
