--- a/protected/assets/sass/openeyes/components/events/_sub-elements.scss
+++ b/protected/assets/sass/openeyes/components/events/_sub-elements.scss
@@ -36,7 +36,6 @@
 	margin-bottom: 10px;
 	.sub-element-title {
 		color: #666;
-		float: left;
 		font-size: $default-font-size;
 		font-style: normal;
 		margin: 0;
